--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "typeRoots": ["./node_modules/@types", "./types"],
     "outDir": "./dist"
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "test"]
 }
